// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton component renders correctly when it is for modal 1`] = `
<Image
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  source={
    Object {
      "uri": "feed_rn_close_button",
    }
  }
  style={
    Array [
      Object {
        "height": 25,
        "marginLeft": 5,
        "tintColor": "#FFFFFF",
        "width": 25,
      },
      Object {
        "left": 5,
        "position": "absolute",
        "top": 30,
        "zIndex": 5,
      },
      Object {
        "tintColor": "#FFFFFF99",
      },
    ]
  }
  testID={undefined}
/>
`;

exports[`CloseButton component renders correctly when it is not for modal 1`] = `
<Image
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  source={
    Object {
      "uri": "feed_rn_close_button",
    }
  }
  style={
    Array [
      Object {
        "height": 25,
        "marginLeft": 5,
        "tintColor": "#FFFFFF",
        "width": 25,
      },
      null,
      Object {
        "tintColor": "#FFFFFF99",
      },
    ]
  }
  testID={undefined}
/>
`;
